<resources>
    <string name="app_name">Diabetes Health Monitoring App</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password.....6+ characters</string>
    <string name="confirm_password">Confirm Password…6+ characters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient">Patient</string>
    <string name="doctor">Health worker</string>
    <string name="picture">picture</string>
    <string name="comment">This is where the comments from the patient about the nature of the reading goes</string>
    <string name="date">Date</string>
    <string name="logout">Logout</string>
    <string name="register_with_doctor">Register with doctor</string>
    <string name="name">Name</string>
    <string name="this_is_the_text_line">This is the text line</string>
    <string name="online">Online</string>
    <string name="reading">Reading</string>
    <string name="time">Time</string>
    <string name="readings">Readings</string>
    <string name="bookings">Bookings</string>
    <string name="upload_reading">Upload Reading</string>
    <string name="interaction">Interaction</string>
    <string name="health_worker">Health worker</string>
    <string name="hospital">Hospital</string>
    <array name="hospitals">
        <item>Coptic Hospital, Nairobi</item>
        <item>Kenyatta National Hospital, Nairobi</item>
        <item>Coast General Hospital, Mombasa</item>
        <item>Thika Level 5 Hospital, Thika</item>
        <item>Kiambu Level 5 Hospital, Kiambu</item>
        <item>Meru County Level 5 Hospital, Meru</item>
        <item>Othaya Level 5 Hospital, Nyeri</item>
        <item>Nakuru County Level 5 Hospital, Nakuru</item>
        <item>Kakamega Level 5 Hospital, Kakamega</item>
        <item>Embu Level 5 Hospital, Embu</item>
        <item>Machakos Level 5 Hospital, Machakos</item>
        <item>Mama Lucy Kibaki Level 5 Hospital, Nairobi</item>
        <item>Garissa Level 5 Hospital, Garissa</item>
        <item>Kisumu Level 5 Hospital, Kisumu</item>
        <item>Nyeri Level 5 Hospital, Nyeri</item>
        <item>Ruai Family Hospital, Nairobi</item>
    </array>

</resources>